--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -39,7 +39,12 @@
 
 /* Header --------------------------------------------------------------------------------------------------------------- */
 
-#header {}
+#headerRow {
+  position: fixed;
+  width: 100%;
+  will-change: transform;
+  transition: transform 0.25s ease-in-out;
+}
 
 #header #logo {
   margin: 30px 0 0 0;
@@ -50,6 +55,14 @@
   padding: 0;
   font-size: 22px;
   text-transform: uppercase;
+}
+
+.header-on {
+  transform: translateY(0);
+}
+
+.header-off {
+  transform: translateY(-300px);
 }
 
 /* Page Intro --------------------------------------------------------------------------------------------------------------- */
