--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -128,19 +128,19 @@
 }
 
 .bg01 {
-    background-image: url('../images/demo/backgrounds/01.png');
+    background-image: url('../../images/demo/backgrounds/conciergerie1.jpg');
 }
 
 .bg02 {
-    background-image: url('../images/demo/backgrounds/02.png');
+    background-image: url('../../images/demo/backgrounds/conciergerie1.jpg');
 }
 
 .bg03 {
-    background-image: url('../images/demo/backgrounds/03.png');
+    background-image: url('../../images/demo/backgrounds/conciergerie1.jpg');
 }
 
 .bg04 {
-    background-image: url('../images/demo/backgrounds/04.png');
+    background-image: url('../../images/demo/backgrounds/conciergerie1.jpg');
 }
 
 /* Used when elements stack in smaller viewports */
